Menu Overlay z-index fix

--- a/Examples/Widgets/CRM/src/components/Visits.scss
+++ b/Examples/Widgets/CRM/src/components/Visits.scss
@@ -71,14 +71,13 @@
   grid-area: grid;
 }
 
-.visits-matrix::after {
+.visits-matrix::before {
   content: "";
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
   background: repeating-linear-gradient(
       to right,
       transparent,
